k8s/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
  namespace: datalake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: python:3.10-slim
        command:
          - "bash"
          - "-c"
          - >
            pip install mlflow==2.16.2 boto3==1.33.13 &&
            mlflow server 
            --backend-store-uri sqlite:///mlruns.db 
            --default-artifact-root s3://models 
            --host 0.0.0.0 
            --port 5000
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: datalake
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
