k8s/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  namespace: datalake
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mlflow.projeto.azure
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
